--- a/weddings.html
+++ b/weddings.html
@@ -26,11 +26,11 @@
 
     <nav class="nav-center">
       <div class="nav-dropdown">
-        <a href="index.html#usluge" class="nav-link">Usluge <i class="fas fa-chevron-down"></i></a>
+        <a href="#" class="nav-link" onclick="return false;">Usluge <i class="fas fa-chevron-down"></i></a>
         <div class="nav-dropdown-menu">
           <a href="weddings.html" class="nav-dropdown-item active">Vjenčanja</a>
-          <a href="index.html#usluge" class="nav-dropdown-item">Poslovni eventi</a>
-          <a href="index.html#usluge" class="nav-dropdown-item">Privatne zabave</a>
+          <a href="business.html" class="nav-dropdown-item">Poslovni eventi</a>
+          <a href="party.html" class="nav-dropdown-item">Privatne zabave</a>
         </div>
       </div>
       <a href="galerija.html" class="nav-link">Galerija</a>
@@ -45,8 +45,8 @@
   <!-- HERO -->
   <section class="hero hero-weddings">
     <picture>
-      <source srcset="image/Gableraj-66.avif" type="image/avif" />
-      <img src="image/Gableraj-66.webp" alt="Catering za vjenčanja" />
+      <source srcset="image/Gableraj-198.avif" type="image/avif" />
+      <img src="image/Gableraj-198.webp" alt="Catering za vjenčanja" />
     </picture>
     <div class="hero-content">
       <div class="gallery-header-left">
@@ -406,8 +406,8 @@
     </div>
   </section>
 
-  <!-- CONTACT CTA SECTION -->
-  <section class="contact-cta-section">
+   <!-- CONTACT CTA SECTION -->
+   <section class="contact-cta-section">
     <div class="page">
       <div class="contact-cta-content">
         <div class="contact-cta-kicker">KONTAKT</div>
@@ -418,6 +418,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- GALLERY SLIDER SECTION -->
   <section class="gallery-slider-section">
@@ -467,14 +468,14 @@
         </div>
         <div class="gallery-slider-item">
           <picture>
-            <source srcset="image/Gableraj-172.avif" type="image/avif" />
-            <img src="image/Gableraj-172.webp" alt="Catering Gableraj" loading="lazy" />
+            <source srcset="image/Gableraj-18.avif" type="image/avif" />
+            <img src="image/Gableraj-18.webp" alt="Catering Gableraj" loading="lazy" />
           </picture>
         </div>
         <div class="gallery-slider-item">
           <picture>
-            <source srcset="image/Gableraj-173.avif" type="image/avif" />
-            <img src="image/Gableraj-173.webp" alt="Catering Gableraj" loading="lazy" />
+            <source srcset="image/Gableraj-5.avif" type="image/avif" />
+            <img src="image/Gableraj-5.webp" alt="Catering Gableraj" loading="lazy" />
           </picture>
         </div>
         <div class="gallery-slider-item">
@@ -518,6 +519,8 @@
     </div>
   </section>
 
+ 
+  
   <!-- FOOTER -->
   <footer class="footer">
     <div class="page footer-inner">
@@ -533,8 +536,8 @@
           <ul class="footer-column-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#usluge">Vjenčanja</a></li>
-            <li><a href="index.html#usluge">Poslovni eventi</a></li>
-            <li><a href="index.html#usluge">Privatne zabave</a></li>
+            <li><a href="business.html">Poslovni eventi</a></li>
+            <li><a href="party.html">Privatne zabave</a></li>
           </ul>
         </div>
         <div class="footer-column">
