--- a/galerija.html
+++ b/galerija.html
@@ -26,11 +26,11 @@
 
     <nav class="nav-center">
       <div class="nav-dropdown">
-        <a href="index.html#usluge" class="nav-link">Usluge <i class="fas fa-chevron-down"></i></a>
+        <a href="#" class="nav-link" onclick="return false;">Usluge <i class="fas fa-chevron-down"></i></a>
         <div class="nav-dropdown-menu">
           <a href="weddings.html" class="nav-dropdown-item">Vjenčanja</a>
-          <a href="index.html#usluge" class="nav-dropdown-item">Poslovni eventi</a>
-          <a href="index.html#usluge" class="nav-dropdown-item">Privatne zabave</a>
+          <a href="business.html" class="nav-dropdown-item">Poslovni eventi</a>
+          <a href="party.html" class="nav-dropdown-item">Privatne zabave</a>
         </div>
       </div>
       <a href="galerija.html" class="nav-link active">Galerija</a>
@@ -46,7 +46,7 @@
   <section class="hero hero-gallery">
     <picture>
       <source srcset="image/Gableraj-67.avif" type="image/avif" />
-      <img src="image/Gableraj-67.webp" alt="Catering stol s raznovrsnom hranom" />
+      <img src="image/Gableraj-67.webp" alt="Catering stol s raznovrsnom hranom" fetchpriority="high" />
     </picture>
     <div class="hero-content">
       <div class="gallery-header-left">
@@ -227,8 +227,8 @@
           <ul class="footer-column-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#usluge">Vjenčanja</a></li>
-            <li><a href="index.html#usluge">Poslovni eventi</a></li>
-            <li><a href="index.html#usluge">Privatne zabave</a></li>
+            <li><a href="business.html">Poslovni eventi</a></li>
+            <li><a href="party.html">Privatne zabave</a></li>
           </ul>
         </div>
         <div class="footer-column">
