--- a/party.html
+++ b/party.html
@@ -24,6 +24,12 @@
         <a href="index.html"><img class="logo" src="image/logo.png" alt="Catering Gableraj" /></a>
     </div>
 
+    <button class="mobile-menu-toggle" aria-label="Toggle menu">
+      <i class="fas fa-bars"></i>
+    </button>
+
+    <div class="mobile-menu-overlay"></div>
+
     <nav class="nav-center">
       <div class="nav-dropdown">
         <a href="#" class="nav-link" onclick="return false;">Usluge <i class="fas fa-chevron-down"></i></a>
@@ -35,6 +41,9 @@
       </div>
       <a href="galerija.html" class="nav-link">Galerija</a>
       <a href="about.html" class="nav-link">O nama</a>
+      <div class="nav-mobile-button">
+        <a href="index.html#kontakt"><button class="btn-primary">Ponuda</button></a>
+      </div>
     </nav>
 
     <div class="nav-right">
